--- a/public/assets/javaScript/p5.js/styles.css
+++ b/public/assets/javaScript/p5.js/styles.css
@@ -2,6 +2,8 @@
 html, body{
   margin: 0;
   padding: 0;
+  /* Fixes visible scrollbar */
+  overflow: hidden;
 }
 
 canvas{
